fixed horizontal scroll bar issue

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,4 +1,7 @@
 // place your custom styles here
+body {
+    overflow-x: hidden !important;
+}
 .copyright {
     display: none !important;
 }
